BIS-1765 : New DSS: Use path info db entries : more tests and bugfixes